Fix MathJax x-overflow

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -687,6 +687,6 @@ article {
 
 /* Others
 -------------------------------------------------- */
-.table-container {
+.x-overflow-container {
   overflow-x: auto;
 }
